refactor javascript and add css and hmtl to match changes

--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
         </form>
 
         <div id="questions" style="display: none;">
-          <h2>Hey <span id="display-name"></span>!</h2>
-          <p>Please type "<strong>yes</strong>" or "<strong>no</strong>" in the box below the question to answer the questions below.</p>
-          <div class="question"></div>
-          <div class="question"></div>
-          <div class="question"></div>
-          <div class="question"></div>
-          <div class="question"></div>
           <div id="num-correct"></div>
+          <h2>Hey <span id="display-name"></span>!</h2>
+          <p id="instructions">Please type "<strong>yes</strong>" or "<strong>no</strong>" in the boxes below the questions to answer them.</p>
+          <div class="question"></div>
+          <div class="question"></div>
+          <div class="question"></div>
+          <div class="question"></div>
+          <div class="question"></div>
+          
         </div>
       </div>
     </main>
