add content to about me page by replacing lorem ipsum

--- a/index.html
+++ b/index.html
@@ -25,29 +25,51 @@
     <main>
       <div id="bio">
         <h1>Bio</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
+        <p>I grew up in Trinidad and Tobago, spent 4 years teaching Mathematics in Grenada, and lived in New York for about 15 years (on and off). I served in the Navy Reserves for 7 years, in a group called the Seabees. I enjoy giving back to young people, and during the past 3 years I have worked with organizations like Girls Who Code and New York On Tech to help underrepresented teens learn the fundamentals of coding. I hope to find a similar organization to work with here in Seattle. As a new resident of Seattle, I hope to take advantage of the outdoor activities and explore what the rest of the West Coast has to offer.</p>
       </div>
         
       <div id="education">
         <h1>Education</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>I am not afraid to learn new things, and consider myself a life long learner. I was inpsired by my uncle at an early age, because he had learning disabilities as a child that prevented him from going to school. As an adult, he enrolled in classes to complete his high school leaving certificate (equivalent to a GED in the US). I always remembered his determination and try to go after things that I am interested in. At one point in time, I even signed up to learn accounting, which I discovered quickly that I had little interest in.</p>
+        
+        <p>My education includes obtaining a Bachelors degree in Mathematics, and additional course work in various schools and programs in Statistics, Web Development, Database Management, and Java Development, as well as Computer Science.</p>
       </div>
 
       <div id="work-exp">
         <h1>Work Experience</h1>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
+        <p>Since graduating college, I held a few jobs that include:</p>
+        <ul>
+          <li>Teaching for over 10 years</li>
+          <li>Project Management</li>
+          <li>Software Development</li>
+          <li>Sailor in the Navy</li>
+        </ul>
       </div>
 
       <div id="goals">
         <h1>Goals</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <h3>Professional Goals</h3>
+        3 Professional Goals I have are:
+        <ul>
+          <li>Working as a Backend Engineer to include years of experience in Java Development</li>
+          <li>Becoming more proficient on the front end</li>
+          <li>Give a presentation at a Conference</li>
+        </ul>
+
+        <h3>Personal Bucket List</h3>
+        My top 10 items on my bucket list are:
+        <ol>
+          <li>Visit Greece</li>
+          <li>Learn to drive -  can you believe that I do not know how to drive?</li>
+          <li>Visit Alaska to see the Northern Lights</li>
+          <li>Visit Malta at Christmas - heard it is lovely that time of year</li>
+          <li>Retire at 50 - I am just throwing this out there so that the universe will hear me</li>
+          <li>Win the lotto -  this would definitely help me with retiring early :)</li>
+          <li>Visit London for Notting Hill Carnival</li>
+          <li>Visit Hawaii</li>
+          <li>Visit Japan -  I love their culture</li>
+          <li>Visit Jamaica for Carnival</li>
+        </ol>
       </div>
 
       <div id="quiz">
