add number guess game, fix eslint errors upadte readme

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div id="questions" style="display: none;">
           <div id="num-correct"></div>
           <h2>Hey <span id="display-name"></span>!</h2>
-          <p id="instructions">Please type "<strong>yes</strong>" or "<strong>no</strong>" in the boxes below the questions to answer them.</p>
+          <h2 id="instructions">Please type "<strong>yes</strong>" or "<strong>no</strong>" in the boxes below the questions to answer them.</h2>
           <div class="question"></div>
           <div class="question"></div>
           <div class="question"></div>
