add image to page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 
     <main>
+      <img src="http://www.gravatar.com/avatar/de0f0e2e1155cde50a36447c9fcc3e8d" alt="picture of self">
       <div id="bio">
         <h1>Bio</h1>
         <p>I grew up in Trinidad and Tobago, spent 4 years teaching Mathematics in Grenada, and lived in New York for about 15 years (on and off). I served in the Navy Reserves for 7 years, in a group called the Seabees. I enjoy giving back to young people, and during the past 3 years I have worked with organizations like Girls Who Code and New York On Tech to help underrepresented teens learn the fundamentals of coding. I hope to find a similar organization to work with here in Seattle. As a new resident of Seattle, I hope to take advantage of the outdoor activities and explore what the rest of the West Coast has to offer.</p>
